feat: implement remaining issues (#58, #61, #63, #64, #66)
Add Offline Mode (#63):
- SettingsData: new `isOfflineMode` field
- SettingsScreen: toggle with WifiOff icon and description
- LauncherController: skip auth and file sync when offline
- AppRoot: create stub session from cached credentials

Add full Server Settings UI (#64):
- JVM arguments multiline text field
- Window resolution (width × height) numeric fields
- Fullscreen toggle switch
- Auto-connect toggle switch
- Extract settingsFieldColors() and SettingsToggleRow() helpers

Add Server Icon Upload (#66):
- Clickable 48×48 icon preview in server settings header
- File picker for PNG/JPG, copies to clients/<assetDir>/icon.png
- SquareServerCard already reads from this path

Add Disk Cache for Skins (#61):
- Three-level cache: memory → disk → network
- Cache dir: ~/.aura/skin-cache/{front,back,raw}_<nick>.png
- 30-minute TTL with invalidate() clearing both layers

Replace Base64 password with AES-256-GCM (#58):
- PBKDF2-derived key from machine-specific seed
- credentials.json v2: encryptedPassword, passwordIv, version
- Transparent migration from old Base64 format

i18n: add strings for offline mode, server settings, icon upload
(EnglishStrings, RussianStrings, GermanStrings)